--- a/Main.html
+++ b/Main.html
@@ -32,36 +32,40 @@
                 <div class="col-lg-7   d-flex flex-column justify-content-end">
                     <div class="banner-header-top flex-grow-1">
                         <div class="text">
-                            <p>Hệ thống được phát triển bởi T</p>
+                            <p>Hệ thống được phát triển bởi FAG</p>
                         </div>
                         <div class="Banner-login">
                             <div class="log-in">
-                                <p>Đăng Nhập</p>
+                                <a href="http://127.0.0.1:5500/Dangky/dangky.html">
+                                    <p>Đăng Ký</p>
+                                </a>
                             </div>
                             <div class="log-out">
-                                <p>Đăng Xuất</p>
+                                <a href="http://127.0.0.1:5500/Dangnhap/dangnhap.html">
+                                    <p>Đăng Nhập</p>
+                                </a>
                             </div>
+                                
                         </div>
                     </div>
                     <div class="banner-header-top-bottom">
                         <div class="banner-header-top-bottom-main ">
                             <a href="#Home">
-                                <p>HOME</p>
+                                <p>TRANG CHỦ</p>
                             </a>
-                            <a href="#contact">
-                                <p>GIẢI ĐẤU</p>
-                            </a>
-                            <a href="#sport">
-                                <p>GIỚI THIỆU</p>
-                            </a>
-                            <a href="#contact">
+                            <a href="http://127.0.0.1:5500/Doibong/Doibong.html">
+                                <p>ĐỘI BÓNG</p>
+                            <a href="">
                                 <p>HƯỚNG DẪN</p>
                             </a>
-                            <a href="#contact">
+                            <a href="">
                                 <p>BẢNG GIÁ</p>
                             </a>
-                            <a href="#contact">
+                            <a href="">
                                 <p>TIN TỨC</p>
+                            </a>
+                            <a href="">
+                                <p>HỖ TRỢ</p>
                             </a>
                         </div>
                     </div>
