--- a/Doibong/Doibong.html
+++ b/Doibong/Doibong.html
@@ -123,7 +123,14 @@
                                 </div>
                             </div>
                             <div class="followers">
-                                <a href="#"><p>Theo dõi</p></a>
+                                <a href="#" id="follow-btn"><p>Theo dõi</p></a>
+                            </div>
+                            <div id="confirmation-modal" class="modal">
+                                <div class="modal-content">
+                                    <p>Bạn có muốn theo dõi không?</p>
+                                    <button id="confirm-yes">Yes</button>
+                                    <button id="confirm-no">No</button>
+                                </div>
                             </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
@@ -171,7 +178,14 @@
                                 </div>
                             </div>
                             <div class="followers">
-                                <a href="#"><p>Theo dõi</p></a>
+                                <a href="#" id="follow-btn-2" ><p>Theo dõi</p></a>
+                            </div>
+                            <div id="confirmation-modal" class="modal">
+                                <div class="modal-content">
+                                    <p>Bạn có muốn theo dõi không?</p>
+                                    <button id="confirm-yes">Yes</button>
+                                    <button id="confirm-no">No</button>
+                                </div>
                             </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
@@ -219,7 +233,14 @@
                                 </div>
                             </div>
                             <div class="followers">
-                                <a href="#"><p>Theo dõi</p></a>
+                                <a href="#" id="follow-btn-3"><p>Theo dõi</p></a>
+                            </div>
+                            <div id="confirmation-modal" class="modal">
+                                <div class="modal-content">
+                                    <p>Bạn có muốn theo dõi không?</p>
+                                    <button id="confirm-yes">Yes</button>
+                                    <button id="confirm-no">No</button>
+                                </div>
                             </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
@@ -267,7 +288,14 @@
                                 </div>
                             </div>
                             <div class="followers">
-                                <a href="#"><p>Theo dõi</p></a>
+                                <a href="#" id="follow-btn-4"><p>Theo dõi</p></a>
+                            </div>
+                            <div id="confirmation-modal" class="modal">
+                                <div class="modal-content">
+                                    <p>Bạn có muốn theo dõi không?</p>
+                                    <button id="confirm-yes">Yes</button>
+                                    <button id="confirm-no">No</button>
+                                </div>
                             </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
@@ -328,6 +356,13 @@
                             <div class="followers">
                                 <a href="#"><p>Theo dõi</p></a>
                             </div>
+                            <div id="confirmation-modal" class="modal">
+                                <div class="modal-content">
+                                    <p>Bạn có muốn theo dõi không?</p>
+                                    <button id="confirm-yes">Yes</button>
+                                    <button id="confirm-no">No</button>
+                                </div>
+                            </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
                                     <div class="count-champion-main">
@@ -375,6 +410,13 @@
                             </div>
                             <div class="followers">
                                 <a href="#"><p>Theo dõi</p></a>
+                            </div>
+                            <div id="confirmation-modal" class="modal">
+                                <div class="modal-content">
+                                    <p>Bạn có muốn theo dõi không?</p>
+                                    <button id="confirm-yes">Yes</button>
+                                    <button id="confirm-no">No</button>
+                                </div>
                             </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
@@ -424,6 +466,13 @@
                             <div class="followers">
                                 <a href="#"><p>Theo dõi</p></a>
                             </div>
+                            <div id="confirmation-modal" class="modal">
+                                <div class="modal-content">
+                                    <p>Bạn có muốn theo dõi không?</p>
+                                    <button id="confirm-yes">Yes</button>
+                                    <button id="confirm-no">No</button>
+                                </div>
+                            </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
                                     <div class="count-champion-main">
@@ -471,6 +520,13 @@
                             </div>
                             <div class="followers">
                                 <a href="#"><p>Theo dõi</p></a>
+                            </div>
+                            <div id="confirmation-modal" class="modal">
+                                <div class="modal-content">
+                                    <p>Bạn có muốn theo dõi không?</p>
+                                    <button id="confirm-yes">Yes</button>
+                                    <button id="confirm-no">No</button>
+                                </div>
                             </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
@@ -530,6 +586,13 @@
                             <div class="followers">
                                 <a href="#"><p>Theo dõi</p></a>
                             </div>
+                            <div id="confirmation-modal" class="modal">
+                                <div class="modal-content">
+                                    <p>Bạn có muốn theo dõi không?</p>
+                                    <button id="confirm-yes">Yes</button>
+                                    <button id="confirm-no">No</button>
+                                </div>
+                            </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
                                     <div class="count-champion-main">
@@ -577,6 +640,13 @@
                             </div>
                             <div class="followers">
                                 <a href="#"><p>Theo dõi</p></a>
+                            </div>
+                            <div id="confirmation-modal" class="modal">
+                                <div class="modal-content">
+                                    <p>Bạn có muốn theo dõi không?</p>
+                                    <button id="confirm-yes">Yes</button>
+                                    <button id="confirm-no">No</button>
+                                </div>
                             </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
@@ -626,6 +696,13 @@
                             <div class="followers">
                                 <a href="#"><p>Theo dõi</p></a>
                             </div>
+                            <div id="confirmation-modal" class="modal">
+                                <div class="modal-content">
+                                    <p>Bạn có muốn theo dõi không?</p>
+                                    <button id="confirm-yes">Yes</button>
+                                    <button id="confirm-no">No</button>
+                                </div>
+                            </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
                                     <div class="count-champion-main">
@@ -673,6 +750,13 @@
                             </div>
                             <div class="followers">
                                 <a href="#"><p>Theo dõi</p></a>
+                            </div>
+                            <div id="confirmation-modal" class="modal">
+                                <div class="modal-content">
+                                    <p>Bạn có muốn theo dõi không?</p>
+                                    <button id="confirm-yes">Yes</button>
+                                    <button id="confirm-no">No</button>
+                                </div>
                             </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
@@ -732,6 +816,13 @@
                             <div class="followers">
                                 <a href="#"><p>Theo dõi</p></a>
                             </div>
+                            <div id="confirmation-modal" class="modal">
+                                <div class="modal-content">
+                                    <p>Bạn có muốn theo dõi không?</p>
+                                    <button id="confirm-yes">Yes</button>
+                                    <button id="confirm-no">No</button>
+                                </div>
+                            </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
                                     <div class="count-champion-main">
@@ -779,6 +870,13 @@
                             </div>
                             <div class="followers">
                                 <a href="#"><p>Theo dõi</p></a>
+                            </div>
+                            <div id="confirmation-modal" class="modal">
+                                <div class="modal-content">
+                                    <p>Bạn có muốn theo dõi không?</p>
+                                    <button id="confirm-yes">Yes</button>
+                                    <button id="confirm-no">No</button>
+                                </div>
                             </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
@@ -828,6 +926,13 @@
                             <div class="followers">
                                 <a href="#"><p>Theo dõi</p></a>
                             </div>
+                            <div id="confirmation-modal" class="modal">
+                                <div class="modal-content">
+                                    <p>Bạn có muốn theo dõi không?</p>
+                                    <button id="confirm-yes">Yes</button>
+                                    <button id="confirm-no">No</button>
+                                </div>
+                            </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
                                     <div class="count-champion-main">
@@ -875,6 +980,13 @@
                             </div>
                             <div class="followers">
                                 <a href="#"><p>Theo dõi</p></a>
+                            </div>
+                            <div id="confirmation-modal" class="modal">
+                                <div class="modal-content">
+                                    <p>Bạn có muốn theo dõi không?</p>
+                                    <button id="confirm-yes">Yes</button>
+                                    <button id="confirm-no">No</button>
+                                </div>
                             </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
@@ -934,6 +1046,13 @@
                             <div class="followers">
                                 <a href="#"><p>Theo dõi</p></a>
                             </div>
+                            <div id="confirmation-modal" class="modal">
+                                <div class="modal-content">
+                                    <p>Bạn có muốn theo dõi không?</p>
+                                    <button id="confirm-yes">Yes</button>
+                                    <button id="confirm-no">No</button>
+                                </div>
+                            </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
                                     <div class="count-champion-main">
@@ -981,6 +1100,13 @@
                             </div>
                             <div class="followers">
                                 <a href="#"><p>Theo dõi</p></a>
+                            </div>
+                            <div id="confirmation-modal" class="modal">
+                                <div class="modal-content">
+                                    <p>Bạn có muốn theo dõi không?</p>
+                                    <button id="confirm-yes">Yes</button>
+                                    <button id="confirm-no">No</button>
+                                </div>
                             </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
@@ -1030,6 +1156,13 @@
                             <div class="followers">
                                 <a href="#"><p>Theo dõi</p></a>
                             </div>
+                            <div id="confirmation-modal" class="modal">
+                                <div class="modal-content">
+                                    <p>Bạn có muốn theo dõi không?</p>
+                                    <button id="confirm-yes">Yes</button>
+                                    <button id="confirm-no">No</button>
+                                </div>
+                            </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
                                     <div class="count-champion-main">
@@ -1077,6 +1210,13 @@
                             </div>
                             <div class="followers">
                                 <a href="#"><p>Theo dõi</p></a>
+                            </div>
+                            <div id="confirmation-modal" class="modal">
+                                <div class="modal-content">
+                                    <p>Bạn có muốn theo dõi không?</p>
+                                    <button id="confirm-yes">Yes</button>
+                                    <button id="confirm-no">No</button>
+                                </div>
                             </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
