--- a/Main_login/Main_login.html
+++ b/Main_login/Main_login.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/slick/slick.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="/slick/slick-theme.less">
-    <link rel="stylesheet" href="Main.css">
+    <link rel="stylesheet" href="Main_login.css">
     <link rel="icon" href="img-Logo/Thanhtan.jpg" type="image/x-icon" />
     <title>FootballLeague-Quản Lý Bóng Đá</title>
 </head>
@@ -35,17 +35,12 @@
                             <p>Hệ thống được phát triển bởi FAG</p>
                         </div>
                         <div class="Banner-login">
-                            <div class="log-in">
-                                <a href="http://127.0.0.1:5500/Dangky/dangky.html">
-                                    <p>Đăng Ký</p>
-                                </a>
-                            </div>
-                            <div class="log-out">
-                                <a href="http://127.0.0.1:5500/Dangnhap/dangnhap.html">
-                                    <p>Đăng Nhập</p>
-                                </a>
-                            </div>
-                                
+                           <div class="icon-User">
+                            <i class='bx bxs-user'></i>
+                           </div>
+                            <div class="Name-User">
+                                <p>Name User</p>
+                            </div>   
                         </div>
                     </div>
                     <div class="banner-header-top-bottom">
@@ -1829,7 +1824,7 @@
         </div>
            
     </section>
-    <script src="main.js"></script>
+    <script src="Main_login.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
