--- a/Main/Main.html
+++ b/Main/Main.html
@@ -1416,7 +1416,7 @@
         </div>
            
     </section>
-    <script src="main.js"></script>
+    <script src="/Main/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
