--- a/Doibong/Doibong.html
+++ b/Doibong/Doibong.html
@@ -62,7 +62,7 @@
                                     <p>BẢNG GIÁ</p>
                                 </a>
                                 <a href="">
-                                    <p>TIN TỨC</p>
+                                    <p>ĐỘI ĐANG THEO DÕI</p>
                                 </a>
                                 <a href="">
                                     <p>HỖ TRỢ</p>
