--- a/Doibong/Doibong.html
+++ b/Doibong/Doibong.html
@@ -62,7 +62,7 @@
                                     <p>BẢNG GIÁ</p>
                                 </a>
                                 <a href="">
-                                    <p>ĐỘI ĐANG THEO DÕI</p>
+                                    <p>TIN TỨC</p>
                                 </a>
                                 <a href="">
                                     <p>HỖ TRỢ</p>
@@ -123,14 +123,7 @@
                                 </div>
                             </div>
                             <div class="followers">
-                                <a href="#" id="follow-btn"><p>Theo dõi</p></a>
-                            </div>
-                            <div id="confirmation-modal" class="modal">
-                                <div class="modal-content">
-                                    <p>Bạn có muốn theo dõi không?</p>
-                                    <button id="confirm-yes">Yes</button>
-                                    <button id="confirm-no">No</button>
-                                </div>
+                                <a href="#"><p>Theo dõi</p></a>
                             </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
@@ -178,14 +171,7 @@
                                 </div>
                             </div>
                             <div class="followers">
-                                <a href="#" id="follow-btn-2" ><p>Theo dõi</p></a>
-                            </div>
-                            <div id="confirmation-modal" class="modal">
-                                <div class="modal-content">
-                                    <p>Bạn có muốn theo dõi không?</p>
-                                    <button id="confirm-yes">Yes</button>
-                                    <button id="confirm-no">No</button>
-                                </div>
+                                <a href="#"><p>Theo dõi</p></a>
                             </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
@@ -233,14 +219,7 @@
                                 </div>
                             </div>
                             <div class="followers">
-                                <a href="#" id="follow-btn-3"><p>Theo dõi</p></a>
-                            </div>
-                            <div id="confirmation-modal" class="modal">
-                                <div class="modal-content">
-                                    <p>Bạn có muốn theo dõi không?</p>
-                                    <button id="confirm-yes">Yes</button>
-                                    <button id="confirm-no">No</button>
-                                </div>
+                                <a href="#"><p>Theo dõi</p></a>
                             </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
@@ -288,14 +267,7 @@
                                 </div>
                             </div>
                             <div class="followers">
-                                <a href="#" id="follow-btn-4"><p>Theo dõi</p></a>
-                            </div>
-                            <div id="confirmation-modal" class="modal">
-                                <div class="modal-content">
-                                    <p>Bạn có muốn theo dõi không?</p>
-                                    <button id="confirm-yes">Yes</button>
-                                    <button id="confirm-no">No</button>
-                                </div>
+                                <a href="#"><p>Theo dõi</p></a>
                             </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
@@ -356,13 +328,6 @@
                             <div class="followers">
                                 <a href="#"><p>Theo dõi</p></a>
                             </div>
-                            <div id="confirmation-modal" class="modal">
-                                <div class="modal-content">
-                                    <p>Bạn có muốn theo dõi không?</p>
-                                    <button id="confirm-yes">Yes</button>
-                                    <button id="confirm-no">No</button>
-                                </div>
-                            </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
                                     <div class="count-champion-main">
@@ -410,13 +375,6 @@
                             </div>
                             <div class="followers">
                                 <a href="#"><p>Theo dõi</p></a>
-                            </div>
-                            <div id="confirmation-modal" class="modal">
-                                <div class="modal-content">
-                                    <p>Bạn có muốn theo dõi không?</p>
-                                    <button id="confirm-yes">Yes</button>
-                                    <button id="confirm-no">No</button>
-                                </div>
                             </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
@@ -466,13 +424,6 @@
                             <div class="followers">
                                 <a href="#"><p>Theo dõi</p></a>
                             </div>
-                            <div id="confirmation-modal" class="modal">
-                                <div class="modal-content">
-                                    <p>Bạn có muốn theo dõi không?</p>
-                                    <button id="confirm-yes">Yes</button>
-                                    <button id="confirm-no">No</button>
-                                </div>
-                            </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
                                     <div class="count-champion-main">
@@ -520,13 +471,6 @@
                             </div>
                             <div class="followers">
                                 <a href="#"><p>Theo dõi</p></a>
-                            </div>
-                            <div id="confirmation-modal" class="modal">
-                                <div class="modal-content">
-                                    <p>Bạn có muốn theo dõi không?</p>
-                                    <button id="confirm-yes">Yes</button>
-                                    <button id="confirm-no">No</button>
-                                </div>
                             </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
@@ -586,13 +530,6 @@
                             <div class="followers">
                                 <a href="#"><p>Theo dõi</p></a>
                             </div>
-                            <div id="confirmation-modal" class="modal">
-                                <div class="modal-content">
-                                    <p>Bạn có muốn theo dõi không?</p>
-                                    <button id="confirm-yes">Yes</button>
-                                    <button id="confirm-no">No</button>
-                                </div>
-                            </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
                                     <div class="count-champion-main">
@@ -640,13 +577,6 @@
                             </div>
                             <div class="followers">
                                 <a href="#"><p>Theo dõi</p></a>
-                            </div>
-                            <div id="confirmation-modal" class="modal">
-                                <div class="modal-content">
-                                    <p>Bạn có muốn theo dõi không?</p>
-                                    <button id="confirm-yes">Yes</button>
-                                    <button id="confirm-no">No</button>
-                                </div>
                             </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
@@ -696,13 +626,6 @@
                             <div class="followers">
                                 <a href="#"><p>Theo dõi</p></a>
                             </div>
-                            <div id="confirmation-modal" class="modal">
-                                <div class="modal-content">
-                                    <p>Bạn có muốn theo dõi không?</p>
-                                    <button id="confirm-yes">Yes</button>
-                                    <button id="confirm-no">No</button>
-                                </div>
-                            </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
                                     <div class="count-champion-main">
@@ -750,13 +673,6 @@
                             </div>
                             <div class="followers">
                                 <a href="#"><p>Theo dõi</p></a>
-                            </div>
-                            <div id="confirmation-modal" class="modal">
-                                <div class="modal-content">
-                                    <p>Bạn có muốn theo dõi không?</p>
-                                    <button id="confirm-yes">Yes</button>
-                                    <button id="confirm-no">No</button>
-                                </div>
                             </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
@@ -816,13 +732,6 @@
                             <div class="followers">
                                 <a href="#"><p>Theo dõi</p></a>
                             </div>
-                            <div id="confirmation-modal" class="modal">
-                                <div class="modal-content">
-                                    <p>Bạn có muốn theo dõi không?</p>
-                                    <button id="confirm-yes">Yes</button>
-                                    <button id="confirm-no">No</button>
-                                </div>
-                            </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
                                     <div class="count-champion-main">
@@ -870,13 +779,6 @@
                             </div>
                             <div class="followers">
                                 <a href="#"><p>Theo dõi</p></a>
-                            </div>
-                            <div id="confirmation-modal" class="modal">
-                                <div class="modal-content">
-                                    <p>Bạn có muốn theo dõi không?</p>
-                                    <button id="confirm-yes">Yes</button>
-                                    <button id="confirm-no">No</button>
-                                </div>
                             </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
@@ -926,13 +828,6 @@
                             <div class="followers">
                                 <a href="#"><p>Theo dõi</p></a>
                             </div>
-                            <div id="confirmation-modal" class="modal">
-                                <div class="modal-content">
-                                    <p>Bạn có muốn theo dõi không?</p>
-                                    <button id="confirm-yes">Yes</button>
-                                    <button id="confirm-no">No</button>
-                                </div>
-                            </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
                                     <div class="count-champion-main">
@@ -980,13 +875,6 @@
                             </div>
                             <div class="followers">
                                 <a href="#"><p>Theo dõi</p></a>
-                            </div>
-                            <div id="confirmation-modal" class="modal">
-                                <div class="modal-content">
-                                    <p>Bạn có muốn theo dõi không?</p>
-                                    <button id="confirm-yes">Yes</button>
-                                    <button id="confirm-no">No</button>
-                                </div>
                             </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
@@ -1046,13 +934,6 @@
                             <div class="followers">
                                 <a href="#"><p>Theo dõi</p></a>
                             </div>
-                            <div id="confirmation-modal" class="modal">
-                                <div class="modal-content">
-                                    <p>Bạn có muốn theo dõi không?</p>
-                                    <button id="confirm-yes">Yes</button>
-                                    <button id="confirm-no">No</button>
-                                </div>
-                            </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
                                     <div class="count-champion-main">
@@ -1100,13 +981,6 @@
                             </div>
                             <div class="followers">
                                 <a href="#"><p>Theo dõi</p></a>
-                            </div>
-                            <div id="confirmation-modal" class="modal">
-                                <div class="modal-content">
-                                    <p>Bạn có muốn theo dõi không?</p>
-                                    <button id="confirm-yes">Yes</button>
-                                    <button id="confirm-no">No</button>
-                                </div>
                             </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
@@ -1156,13 +1030,6 @@
                             <div class="followers">
                                 <a href="#"><p>Theo dõi</p></a>
                             </div>
-                            <div id="confirmation-modal" class="modal">
-                                <div class="modal-content">
-                                    <p>Bạn có muốn theo dõi không?</p>
-                                    <button id="confirm-yes">Yes</button>
-                                    <button id="confirm-no">No</button>
-                                </div>
-                            </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
                                     <div class="count-champion-main">
@@ -1210,13 +1077,6 @@
                             </div>
                             <div class="followers">
                                 <a href="#"><p>Theo dõi</p></a>
-                            </div>
-                            <div id="confirmation-modal" class="modal">
-                                <div class="modal-content">
-                                    <p>Bạn có muốn theo dõi không?</p>
-                                    <button id="confirm-yes">Yes</button>
-                                    <button id="confirm-no">No</button>
-                                </div>
                             </div>
                             <div class="footer-rotate">
                                 <div class="count-champion">
