--- a/Main_login/Main_login.html
+++ b/Main_login/Main_login.html
@@ -38,8 +38,8 @@
                            <div class="icon-User">
                             <i class='bx bxs-user'></i>
                            </div>
-                            <div class="Name-User">
-                                <p>Name User</p>
+                            <div class="Name-User" >
+                                <p id="welcome-message"></p>                       
                             </div>   
                         </div>
                     </div>
@@ -1824,12 +1824,14 @@
         </div>
            
     </section>
-    <script src="Main_login.js"></script>
+    <script src="/Main_login/Main_login.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="/slick/slick.min.js"></script>
+    
 </body>
 
 </html>
+
